# sleep-calc

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  notes.md
.github/workflows/: release.yml
src/: config.rs  error.rs  io.rs  lib.rs  main.rs  output.rs
wix/: main.wxs
